--- a/.gitignore
+++ b/.gitignore
@@ -142,7 +142,7 @@ network_closure.sh
 /cluster/libvirt-coreos/coreos_*.img
 
 # Downloaded Kubernetes binary release
-/kubernetes/
+# /kubernetes/
 
 # direnv .envrc files
 .envrc
