--- a/kubernetes/nfs-persistent-volume/1-nginx-nfs.yml
+++ b/kubernetes/nfs-persistent-volume/1-nginx-nfs.yml
@@ -5,7 +5,7 @@ metadata:
     run: nginx
   name: nginx-deploy
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       run: nginx
@@ -21,6 +21,18 @@ spec:
       containers:
       - image: nginx
         name: nginx
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 10
+          periodSeconds: 30
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 1
+          periodSeconds: 10
         volumeMounts:
         - name: www
           mountPath: /usr/share/nginx/html
