--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Open Source Cloud and DevOps
 description: Readup for cloud people to enjoy.
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-hacker
+theme: jekyll-theme-primer
 
